# mcp-chat

./: .gitignore  CHANGELOG  CLAUDE.md  LICENSE  Makefile  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
k8s/mcp-host/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
