[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiofiles>=24.1.0",
    "boto3>=1.38.12",
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "langchain-aws>=0.2.22",
    "langchain-community>=0.3.23",
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.4.3",
    "pillow>=11.2.1",
]
